Write string